<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ART</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_navigation">Navigation</string>
    <string name="settings_username">Your Username</string>
    <string name="settings_save">Save</string>
    <string name="nav_info">Info</string>
    <string name="nav_contact">Contact</string>
    <string name="settings_username_hint">Username</string>
    <string name="settings_tv_developers">Developers</string>
    <string name="settings_tv_tutors">Tutor</string>
    <string name="settings_tv_krainz">Krainz Elmar</string>
    <string name="settings_tv_team">Höffernig Andreas \nMayerhofer Florian \nPfeifer Kevin</string>
    <string name="contact_btn_email">Email us</string>
    <string name="contact_btn_homepage">Bachelor degree course ITM13</string>
    <string name="main_toast_saved_token">Successfully saved received GCM token to shared preferences!</string>
    <string name="main_toast_not_saved_token">Couldn\'t achieve/save GCM token!</string>
    <string name="main_toast_activated">Status successfully activated!</string>
    <string name="main_toast_gcm_failure">You haven\'t subscribed to the GCM Service successfully. Please check your internet connection!</string>
    <string name="main_toast_no_username">Please enter a username in the settings!</string>
    <string name="main_toast_deactivated">Status successfully deactivated!</string>
    <string name="intent_start_through">Send Mail through</string>
    <string name="settings_toast_username_didnt_change">Username didn\'t change!</string>
    <string name="settings_toast_username_saved">Username successfully saved!</string>
    <string name="undefined_error">Something went wrong, sorry :(</string>
    <string name="settings_toast_username_not_editable">You can\'t change your username while you\'re active!</string>
    <string name="task_tf_task">Task</string>
    <string name="task_tf_where">Location</string>
    <string name="task_bt_dismiss">Dismiss</string>
    <string name="lineadapter_received_on">Received on: </string>
    <string name="nav_server_update">Update Server-Status</string>
    <string name="main_tf_server_active">up</string>
    <string name="main_tf_server_inactive"> down</string>
    <string name="main_tf_server_is">Server is</string>
    <string name="list_toast_task_not_deleted">Task coudln\'t be deleted!</string>
    <string name="task_toast_data_from_list_error">Couldn\'t read all data from list!</string>
    <string name="task_tf_show_in_gmaps">Show in Google Maps</string>
    <string name="dialog_no_gps">Please activate your GPS!</string>
    <string name="posservice_toast_no_location">Couldn\'t track your position!</string>
    <string name="list_toast_task_deleted">Task deleted</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This username address is invalid</string>
    <string name="error_no_connection">No Connection to server possible</string>
    <string name="error_invalid_password">This password is wrong</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
</resources>
