<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/settings_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/settings_username"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/settings_et_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_tv_name"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:hint="@string/settings_username_hint"
        android:inputType="textAutoComplete" />

    <Button
        android:id="@+id/settings_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_et_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/settings_save" />

    <Switch
        android:id="@+id/settings_switch_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_btn_save"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:checked="false"
        android:minHeight="80dp"
        android:switchMinWidth="80dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/settings_switch_active"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/settings_tf_server_is"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="71dp"
            android:gravity="center"
            android:text="@string/main_tf_server_is"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/settings_tf_server_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="5sp"
            android:gravity="center"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>

