<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <!-- Useless Layouts are needed because Android Studio preview is not working without -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:stretchColumns="1">

                <TableRow android:gravity="center_vertical">

                    <TextView
                        android:gravity="center_horizontal"
                        android:minWidth="150dp"
                        android:padding="5dp"
                        android:text="@string/settings_tv_developers"
                        android:textColor="@color/black"
                        android:textSize="@dimen/contact_description"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:scrollHorizontally="false"
                        android:singleLine="false"
                        android:text="@string/settings_tv_team"
                        android:textColor="@color/black"
                        android:textSize="@dimen/contact_content" />

                </TableRow>

                <TableRow
                    android:background="@color/grey"
                    android:gravity="center_vertical">

                    <TextView
                        android:gravity="center_horizontal"
                        android:minWidth="150dp"
                        android:padding="5dp"
                        android:text="@string/about_tf_page"
                        android:textColor="@color/black"
                        android:textSize="@dimen/contact_description"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:scrollHorizontally="false"
                        android:singleLine="false"
                        android:text="http://kerbtech.diphda.uberspace.de/art2/"
                        android:textColor="@color/black"
                        android:textSize="@dimen/contact_content" />

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/contact_btn_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tableLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="50dp"
                android:background="@color/colorAccent"
                android:text="@string/contact_btn_email" />

            <Button
                android:id="@+id/contact_btn_homepage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/contact_btn_email"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:background="@color/colorAccent"
                android:text="@string/contact_btn_homepage" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>